--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*
 html { background-color: darkgrey; }
 body { font: 16px/20px sans-serif; max-width: 1530px; background-color: white; margin: 0em auto; padding: 0.5em; border: 2px solid black; }
 h1::before { content: "# " } h1 { text-transform: uppercase; }
@@ -31,6 +32,8 @@ div.gallery img {width: 32%; aspect-ratio: 4/3; padding: 1px; object-fit: cover;
 @media (min-width:800px) {
   p > img:active, details > img:active, div.gallery > img:active { position: fixed; top: 0; left: 0; bottom: 0; right: 0; z-index: 999; object-fit: contain; width: 100%; height: 100%; margin: 0; padding: 0; background-color: darkgrey; }
 }
+*/
+
 /*
 @media (max-width:600px) {
   img { margin: 0; padding: 0px 0px 0px 2px; width: 100%; height: auto; }
