--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ h6::before { padding-right: 0.5rem;}
 
 a  { text-decoration: underline; color: darkblue; }
 a:not([href])  { color: var(--c1); }
-a>img  {border: 2px solid blue;}
+a>img  {border: 1px solid blue;}
 blockquote  { border-left: 0.2rem solid var(--c1); margin: 0rem; padding: 0.5rem; color: var(--c1)}
 blockquote p  { margin: 0; padding: 0;}
 code  { font-family: Menlo, Consolas, Monaco, "Courier New", Courier, monospace; font-weight: bold; color: var(--c1);  }
@@ -46,7 +46,7 @@ details  { border: 0.1rem solid var(--c1); border-radius: 1rem; }
 details > * { margin-left: 1rem; }
 details summary { margin-left: 0; padding: 0.1rem 1rem; border-radius: 1rem; }
 em  { background-color: wheat; padding: 0.1rem 0.3rem; font-style: normal; }
-img  { margin: 0; padding: 0.5rem; max-height: 20rem; max-width: 100%; }
+/* img  { margin: 0; padding: 0.5rem; max-height: 20rem; max-width: 100%; } */
 img.emoji, img.ico  { vertical-align: middle; width: 1.3rem; height: 1.3rem; padding: 0rem; }
 input.task-list-item-checkbox  { margin-right: 0.5rem}
 li ul { margin: 0; }
@@ -60,13 +60,14 @@ table  { border-collapse: collapse; }
 td  { border: 1px solid black; padding: 0.5rem; vertical-align: top;  }
 ul  { margin: 0; padding: 0 1rem;}
 
+/*
 @media (min-width:800px)  { p > img:active, details > img:active  {
     background-color: rgba(0,0,0,0.85); margin: 0; padding: 0; z-index: 999;
     top: 0; right: 0; bottom: 0; left: 0; height: 100%; width: 100%; max-height:
     100%; max-width: 100%; object-fit: contain; position: fixed; 
 }}
 
-/*
+
 @media (max-width: 1200px) { img { width: 32%; } }
 @media (max-width: 800px) { img { width: 48%; } div.gallery img { width: 48%; } }
 @media (max-width: 500px) { img { width: 100%; } div.gallery img { width: 100%; } }
