--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ details > * { margin-left: 1rem; }
 details summary { margin-left: 0; padding: 0.1rem 1rem; border-radius: 1rem; }
 em  { background-color: wheat; padding: 0.1rem 0.3rem; font-style: normal; }
 img  { margin: 0; max-width: 100%; }
+img:active  { background-color: rgba(0,0,0,0.85); margin: 0; padding: 0; z-index: 999; top: 0; right: 0; bottom: 0; left: 0; height: 100%; width: 100%; max-height: 100%; max-width: 100%; object-fit: contain; position: fixed; }
 img.emoji, img.ico  { vertical-align: middle; width: 1.3rem; height: 1.3rem; padding: 0rem; }
 input.task-list-item-checkbox  { margin-right: 0.5rem}
 li ul { margin: 0; }
