--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,4 +1,4 @@
-<h1>GHP Gallery</h1>
+Gallery
 <div class="gallery">
   {% for file in site.static_files %}
   {% if file.path contains include.folder %}
