--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
 @import "/ghp/styles.css";
 @import "/ghp/rouge.css";
-@import "/styles.css";
-@import "styles.css";
+@import "/style.css";
+@import "style.css";
