--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ html  { background-color: darkgrey; }
 header  {}
 body  { font: 14px "fira sans", sans-serif; max-width: 60rem; background-color: white; margin: 0rem auto; padding: 0 1rem; border: 2px solid silver; line-height: 1.4rem; }
 footer  { display: flex; justify-content: space-between; margin: 1rem; padding: 0.5rem 3rem; text-align: center;}
+img { max-width:98%; }
 
 /*
 nav ul  { list-style: none; margin: 0; padding: 0; display: flex; flex-wrap: wrap; }
