--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,6 @@
-/@import url("/ghp/assets/css/rouge.css");
+@import url("/ghp/assets/css/rouge.css");
 
-:root {
-  --c1: #525559;
-}
+:root { --c1: #525559; }
 html  { background-color: darkgrey; }
 header  {}
 body  { font: 14px "fira sans", sans-serif; max-width: 60rem; background-color: white; margin: 0rem auto; padding: 0 1rem; border: 2px solid silver; line-height: 1.4rem; }
