--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,7 @@
 :root { --c1: #525559; }
 html  { background-color: darkgrey; }
 header  {}
-body  { font: 14px "fira sans", sans-serif; text-align: center; background-color: white; margin: 0rem auto; padding: 0 1rem; border: 2px solid silver; line-height: 1.4rem; }
-body>div {text-align: left;}
+body  { font: 14px "fira sans", sans-serif; background-color: white; margin: 0rem auto; padding: 0 1rem; border: 2px solid silver; line-height: 1.4rem; }
 footer  { display: flex; justify-content: space-between; margin: 1rem; padding: 0.5rem 3rem; text-align: center;}
 
 h1  { font-size: 1.6rem; text-transform: uppercase; display: flex; align-items: center; color: var(--c1); }
@@ -51,7 +50,7 @@ div.flow > ul > li { max-width: 18rem;  list-style-type: none;}
 img.emoji, img.ico  { vertical-align: middle; width: 1.3rem; height: 1.3rem; padding: 0rem; }
 input.task-list-item-checkbox  { margin-right: 0.5rem}
 
-div.gallery {display: flex; flex-wrap: wrap; column-gap: 0.1rem; row-gap: 0.11rem}
+div.gallery {display: flex; flex-wrap: wrap; column-gap: 0.1rem; row-gap: 0.1rem; justify-content: center}
 div.gallery>img {max-width: 60rem; }
 
 /*
