--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,7 @@ input.task-list-item-checkbox  { margin-right: 0.5rem}
 
 div.gallery {display: flex; flex-wrap: wrap; column-gap: 0.1rem; row-gap: 0.1rem; justify-content: center}
 div.gallery>img {max-width: 60rem; }
+div.gallery>img:active {max-width: 100%; }
 
 /*
 nav ul  { list-style: none; margin: 0; padding: 0; display: flex; flex-wrap: wrap; }
